20080503: Added docs/db.html "Database explanation and alternative data loading methods", i.e. direct access to the Berkeley DB files.

20080505: Bar length buttons and combobox were not synchronized. Applied patch #1957299. Thanks to rgf.