@@ -1,7 +1,7 @@
 /*
  *  Qtstalker stock charter
  *
- *  Copyright (C) 2001-2007 Stefan S. Stratigakos
+ *  Copyright (C) 2001-2008 Stefan S. Stratigakos
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -105,7 +105,9 @@ class Preferences : public QTabDialog
     QCheckBox *sliderCheck;
     QCheckBox *barsToLoadFieldCheck;
     QCheckBox *barSpSpinboxCheck;
+    QCheckBox *cmps60BtnCheck;
     QCheckBox *cmps15BtnCheck;
+    QCheckBox *cmps5BtnCheck;
     QCheckBox *cmpsDayBtnCheck;
     QCheckBox *cmpsWkyBtnCheck;
     QCheckBox *cmpsMtyBtnCheck;
